<resources>
    <!-- App -->
    <string name="app_name">Contact</string>

    <!-- Message -->
    <string name="contact_empty">No contact found :(</string>
    <string name="error_email">Invalid email. Ex.: contact@gmail.com</string>
    <string name="error_name">Name less than 3 characters</string>
    <string name="error_number">Invalid number. Ex.: +55 55 555555555</string>
    <string name="error_permission">Without permissions it is not possible to make calls</string>

    <!-- Content description -->
    <string name="float_action_button">Float action</string>
    <string name="contact_close">Contact close</string>

    <!-- Titles -->
    <string name="contact">Contact</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contact">Edit contact</string>

    <!-- Text hints -->
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="number_phone">Phone number</string>
    <string name="country">XX</string>

    <!-- Alert Dialog -->
    <string name="alert_dialog_message">Do you want to delete this contact?</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="search_contact">Search contact…</string>
</resources>